--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,9 +8,9 @@
 :root{
 
     /*      Theme colors        */
-    --text-gray: #3f4954;
+    --text-gray: #7F7F7F;
     --text-light : #686666da;
-    --bg-color: #0f0f0f;
+    --bg-color: #245b98;
     --white: #ffffff;
     --midnight: #104f55;
 
@@ -424,14 +424,16 @@ footer.footer .container > div{
     flex-grow: 1;
     flex-basis: 0;
     padding: 3rem .9rem;
+    color: var(--white);
 }
 
-footer.footer .container h2{
+footer.footer .container h2,
+footer.footer .container p{
     color: var(--white);
 }
 
 footer.footer .newsletter .form-element{
-    background: black;
+    background: #245b98;
     display: inline-block;
 }
 
@@ -439,7 +441,7 @@ footer.footer .newsletter .form-element input{
     padding: .5rem .7rem;
     border: none;
     background: transparent;
-    color: white;
+    color:  var(--black);
     font-family: var(--Josefin);
     font-size: 1rem;
     width: 74%;
@@ -468,8 +470,8 @@ footer.footer .rights{
     font-family: var(--Josefin);
 }
 
-footer.footer .rights h4 a{
-    color: var(--white);
+footer.footer .rights h4{
+    color: var(--black);
 }
 
 footer.footer .move-up{
@@ -479,7 +481,7 @@ footer.footer .move-up{
 }
 
 footer.footer .move-up span{
-    color: var(--midnight);
+    color: var(--white);
 }
 
 footer.footer .move-up span:hover{
