--- a/css/Proyectos.css
+++ b/css/Proyectos.css
@@ -36,7 +36,7 @@ html, body{
 
 
 header {
-    background: #0071bc;
+    background: #476d41;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
     min-height: 50vh;
